unpackaged/config/post/objects/GW_Volunteers__Volunteer_Hours__c.object
<CustomObject>
    <fields>
        <fullName>cUnite_Electronic_Signature_Date__c</fullName>
        <label>Electronic Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cUnite_Electronic_Signature__c</fullName>
        <label>Electronic Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cUnite_Is_Minor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the volunteer is under 18 years old, select this option</inlineHelpText>
        <label>Is Minor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cUnite_Volunteer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search for your volunteer group/organization.</inlineHelpText>
        <label>Volunteer Group</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account must be a &quot;Volunteer Group&quot;</errorMessage>
            <filterItems>
                <field>Account.FlowToolKit__cUnite_Is_Volunteer_Group__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>cUnite_Volunteer_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cUnite_Volunteer_Website_Time_Zone__c</fullName>
        <formula>BlankValue(Text(GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Volunteer_Website_Time_Zone__c),
BlankValue( Text(GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Campaign__r.GW_Volunteers__Volunteer_Website_Time_Zone__c),
Text($User.TimeZoneSidKey)
))</formula>
        <label>Volunteer Website Time Zone</label>
        <type>Text</type>
    </fields>
</CustomObject>